--- a/index.html
+++ b/index.html
@@ -17,33 +17,47 @@
     </div>
 
     <div class="content">
-        <div id="tax-form">
-
-            <div>
-                <label for="input-income">Votre salaire brut annuel :
+        <div class="tax-form">
+            <div class="tax-input-div">
+                <div>
+                    <label for="input-income">Votre salaire brut annuel</label>
                     <input type="text" id="tax-input-income" placeholder="Brut annuel" /> €
-                </label>
-                <label>Marié/Pacsé ?
+                </div>
+                <div>
+                    <label for="tax-input-status">Marié/Pacsé ?</label>
                     <input type="checkbox" id="tax-input-status" />
-                </label>
-                <label>Nombre d'enfants à charge
-                    <input type="text" maxlength="2" id="tax-input-child" />
-                </label>
+                </div>
+                <div>
+                    <label for="tax-input-child">Nombre d'enfants à charge</label>
+                    <input type="text" maxlength="2" id="tax-input-child" placeholder="0" />
+                </div>
             </div>
-            <div>
-                <span>Impôt dû : </span><span id="tax-span-amount">0</span>
+
+            <div class="tax-output-div">
+                <div>
+                    <span>Impôt dû : </span>
+                    <span id="tax-span-amount">0€</span>
+                </div>
+                <div>
+                    <span>Revenus net : </span>
+                    <span id="tax-span-rest">0€</span>
+                </div>
             </div>
-            <div>
-                <span>Revenus net : </span><span id="tax-span-rest">0</span>
-            </div>
+
         </div>
 
+        <span id="no-tax-msg">Vous n'êtes pas concernés par les impôts</span>
 
-        <div>
+        <div class="table-div">
             <table id="table-step-tax">
                 <thead>
                     <tr>
-                        <th colspan="2">Votre côtisation détaillée</th>
+                        <th colspan="4">Votre côtisation détaillée</th>
+                    </tr>
+                    <tr>
+                        <th>%</th>
+                        <th>Montant</th>
+                        <th colspan="2">Tranche</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -53,7 +67,13 @@
         </div>
     </div>
 
+
+    <div class="footer">
+        <span>Réalisé par Rémi :)</span>
+    </div>
+
 </body>
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="assets/js/app.js"></script>
